sunnyside-agency-landing-page-main/css/styles.css
@import url('https://fonts.googleapis.com/css2?family=Barlow:wght@600&family=Fraunces:wght@700;900&display=swap');


:root {
    /*  primary  */
    --soft-red: hsl(7, 99%, 70%);
    --yellow: hsl(51, 100%, 49%);
    --dk-desat-cyan: hsl(167, 40%, 24%);
    --dk-blue: hsl(198, 62%, 26%);
    --dk-med-cyan: hsl(168, 34%, 41%);

    /*  neutral  */
    --v-dk-desat-blue: hsl(212, 27%, 19%);
    --v-dk-gray-blue: hsl(213, 9%, 39%);
    --dk-gray-blue: hsl(232, 10%, 55%);
    --grayish-blue: hsl(210, 4%, 67%);
    --white: hsl(0, 0%, 100%);

    font-size: 18px;
    --font-family-barlow: 'Barlow', sans-serif;
    --font-family-fraunces: 'Fraunces', serif;
}
/* attributions are not my styles */
.attribution { font-size: 11px; text-align: center; }
.attribution a { color: hsl(228, 45%, 44%); }

/* css reset */

html {
    box-sizing: border-box;
    font-size: 16px;
  }
  
  *, *:before, *:after {
    box-sizing: inherit;
  }
  
  body, h1, h2, h3, h4, h5, h6, p, ol, ul {
    margin: 0;
    padding: 0;
    font-weight: normal;
  }
  
  ol, ul {
    list-style: none;
  }
  
  img {
    max-width: 100%;
    height: auto;
  }

  /* navigation */
  .navigation {
    display: flex;
    align-items: center;
    justify-content: space-between;
    flex-direction: row;
    padding: 1rem 2.25rem;
    font-family: var(--font-family-barlow);
    font-size: 1rem;
    color: var(--grayish-blue);
    width: 100vw;
    position: fixed;
    top: 0;
    z-index: 5;
    /* background: var(--white); */
    /* box-shadow: 0px 2px 5px 0px rgba(0,0,0,0.75); */
  }

  .logo-img {
    width: 100px; /* change accordingly, but be wary of spacing */
    height: auto; /* ensures logo retains aspect ratio */
}

.nav-item {
    padding: 1rem;
    margin: auto;
    width: 150px;
    color: var(--v-dk-gray-blue);
    text-decoration: none;
  }

  /* .nav-item:hover {
    background: $nav-item-hover-background;
    border-radius: $nav-item-border-radius;
    color: $white;
  } */

  #navbar-logo:hover {
    background: none;
    /* set to none if using a logo img
    / if you're using an text change this to
     $nav-item-hover-background */
  }
  
   /* lastly, let's hide our nav-burger */
  .nav-burger,
  .burger {
    display: none;
  }

  .hero-wrapper {
      width: 100%;
      height: 100vh;
      background: url('../images/mobile/image-header.jpg') no-repeat center / cover;
  }

  .nav-item.contact {
    background: var(--yellow);
    border-radius: 2rem;
  }

  @media (max-width: 768px) {
    /* hide nav-items on mobile */
    .nav-items {
      display: none;
    }

   .nav-burger {
      display: block;
      width: 40px;
      margin: 0.5em;
   }
   /* here we use pseudo elements to add a top & bottom bar */
  .nav-burger:after,
  .nav-burger:before,
  .burger {
    background: var(--white);
    border-radius: 3px;
    content: "";
    display: block;
    height: 5px;
    margin: 7px 0;
    transition: all 0.3s ease-in;
  }
   /* when active class is added, rotate burger bars into cross */
  .nav-burger.active:before {
    transform: translateY(12px) rotate(135deg);
  }

  .nav-burger.active:after {
    transform: translateY(-12px) rotate(-135deg);
  }
  /* when active class is added to .nav-burger, hide middle bar */
  /* since .burger is child of .nav-burger, make sure to */
  /* select .burger as a child of the .active class */
  .active .burger {
    transform: scale(0);
    opacity: 0; 
  }

  .logo-container { 
      /* this contains our logo and nav-burger */
    width: 100%; 
    display: flex;
    flex-direction: row;
    align-items: center;
    justify-content: space-between; 
    padding: 0; 
  }

  .navigation {
    padding: 1rem;
  }

  .navigation.active {
    flex-direction: column; 
    /* when 'active class is added, changes nav.navigation to column i.e., logo-container on top, navItems on bottom */
  }

  .nav-items.active {
    padding: 1.5rem;
    display: flex;
    flex-direction: column; 
    text-align: center; 
    border-top: 1px solid rgba(0, 0, 0, 0.3); 
    width: 100%;
    background: var(--white);
    position: relative;

    /* .nav-item:hover {
      background: $dark-grey;
      color: $white;
    } */
  }

  .nav-items.active:before {
    content: "";
    width: 0px;
    height: 0px;
    position: absolute;
    border-left: 10px solid transparent;
    border-right: 10px solid var(--white);
    border-top: 10px solid transparent;
    border-bottom: 10px solid var(--white);
    right: 0px;
    top: -20px;
  }
}

